# stats_bucket

./: .gitignore  Anchor.toml  Cargo.toml  build.sh  convert_keypair.py  postprocess_idl.py
client/: Cargo.toml
client/src/: main.rs
js/: .solitarc.js  kinobi.mjs  package.json  tsconfig.json
js/tests/: integration.test.ts
program/: Cargo.toml
program/src/: errors.rs  fixed_point_stuff.rs  instructions.rs  lib.rs  stats_bucket.rs  stats_bucket_account.rs  stats_bucket_instruction.rs
program/src/instructions/: combine_params.rs  push_params.rs
tests/: stats_bucket.ts
