[package]
name = "stats_bucket"
version = "0.1.0"
description = "StatsBucket"
edition = "2021"

[dependencies]
solana-program = "2.1.0"
num-integer = "0.1.46" 
borsh = "1.5.2"
shank = "0.4.2"
num-derive = "0.4.2"
num-traits = "^0.2"
thiserror = "2.0.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "stats_bucket"

[profile.release]
lto = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []