[package]
name = "stats_bucket"
version = "0.1.0"
description = "StatsBucket"
edition = "2021"

[dependencies]
solana-program = "2.1.0"
num-integer = "0.1.46" 
borsh = "1.5.2"
borsh-derive = "1.5.1"
shank = "0.4.2"
num-derive = "0.4.2"
num-traits = "^0.2"
thiserror = "2.0.2"
fixed = "1.28.0"
cordic = "0.1.5"
fixed-macro = "1.2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "stats_bucket"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[features]
no-entrypoint = []
